Only generate drivers for driver transport
Change-Id: I2f425c0d7883e2e436a1cd73dfa64a1c2166cf5e

--- a/tools/fidl/fidlgen_llcpp/codegen/file_driver_messaging_header.tmpl
+++ b/tools/fidl/fidlgen_llcpp/codegen/file_driver_messaging_header.tmpl
@@ -33,21 +33,21 @@ fidl/{{ .LibraryDots }}/cpp/driver_messaging.h
   {{ end -}}
 
 
-  {{- range (call .ProtocolsForTransport "Channel") }}
+  {{- range (call .ProtocolsForTransport "Driver") }}
     {{ template "Driver:Protocol:ForwardDeclaration:MessagingHeader" . }}
   {{- end }}
 
-  {{- range (call .ProtocolsForTransport "Channel") }}
+  {{- range (call .ProtocolsForTransport "Driver") }}
     {{ template "Driver:Protocol:MessagingHeader" . }}
   {{- end }}
 
   {{ EnsureNamespace "fidl" }}
 
-  {{- range (call .ProtocolsForTransport "Channel") }}
+  {{- range (call .ProtocolsForTransport "Driver") }}
     {{ template "Driver:Protocol:Traits:MessagingHeader" . }}
   {{- end }}
 
-  {{- range (call .ProtocolsForTransport "Channel") }}
+  {{- range (call .ProtocolsForTransport "Driver") }}
     {{- range .TwoWayMethods }}
       {{ template "Driver:Method:ResponseContext:MessagingHeader" . }}
     {{- end }}
