Populate enclosing transport
Change-Id: I40d099907b362c6a6c303a1b2a86ff9f622db61c

--- a/tools/fidl/fidlgen_llcpp/codegen/driver_protocol_interface.tmpl
+++ b/tools/fidl/fidlgen_llcpp/codegen/driver_protocol_interface.tmpl
@@ -20,6 +20,7 @@ class {{ .WireServer }} : public ::fidl::internal::IncomingMessageDispatcher {
 
   // The FIDL protocol type that is implemented by this server.
   using _EnclosingProtocol = {{ . }};
+  using _EnclosingTransport = fidl::DriverTransport;
 
 {{ "" }}
   {{- range .Methods }}
