--- a/tools/fidl/fidlgen_llcpp/codegen/file_socket_messaging_source.tmpl
+++ b/tools/fidl/fidlgen_llcpp/codegen/file_socket_messaging_source.tmpl
@@ -22,8 +22,8 @@ fidl/{{ .LibraryDots }}/cpp/driver_messaging.cc
 
 
 {{- range (call .ProtocolsForTransport "Driver") }}
-  {{ template "Driver:Protocol:MessagingSource" . }}
-  {{ template "Driver:Protocol:EventSender:MessagingSource" . }}
+  {{ template "Socket:Protocol:MessagingSource" . }}
+  {{ template "Socket:Protocol:EventSender:MessagingSource" . }}
 {{ end }}
 {{ "" }}
 
