--- a/tools/fidl/fidlgen_llcpp/codegen/socket_protocol_details.tmpl
+++ b/tools/fidl/fidlgen_llcpp/codegen/socket_protocol_details.tmpl
@@ -4,7 +4,7 @@
 // found in the LICENSE file.
 */}}
 
-{{- define "Driver:Protocol:Details:MessagingHeader" }}
+{{- define "Socket:Protocol:Details:MessagingHeader" }}
 {{ EnsureNamespace "" }}
 {{- IfdefFuchsia }}
 template<>
