--- a/tools/fidl/fidlgen_llcpp/codegen/socket_method_client_impl_async.tmpl
+++ b/tools/fidl/fidlgen_llcpp/codegen/socket_method_client_impl_async.tmpl
@@ -4,7 +4,7 @@
 // found in the LICENSE file.
 */}}
 
-{{- define "Driver:Method:ClientImplAsync:MessagingHeader" }}
+{{- define "Socket:Method:ClientImplAsync:MessagingHeader" }}
   {{- IfdefFuchsia -}}
   {{- /* Async managed flavor */}}
   {{- .Docs }}
@@ -45,7 +45,7 @@
 {{- end }}
 
 
-{{- define "Driver:Method:ClientImplAsync:MessagingSource" }}
+{{- define "Socket:Method:ClientImplAsync:MessagingSource" }}
   {{- IfdefFuchsia -}}
 
   {{- /* Async managed flavor */}}
