--- a/tools/fidl/fidlgen_llcpp/codegen/socket_method_result.tmpl
+++ b/tools/fidl/fidlgen_llcpp/codegen/socket_method_result.tmpl
@@ -4,7 +4,7 @@
 // found in the LICENSE file.
 */}}
 
-{{- define "Driver:Method:Result:MessagingHeader" }}
+{{- define "Socket:Method:Result:MessagingHeader" }}
 {{- EnsureNamespace "" }}
 template<>
 class {{ .WireResult }} final : public ::fidl::Result {
@@ -64,7 +64,7 @@ class {{ .WireResult }} final : public ::fidl::Result {
 
 
 
-{{- define "Driver:Method:Result:MessagingSource" }}
+{{- define "Socket:Method:Result:MessagingSource" }}
 {{- IfdefFuchsia -}}
 {{- EnsureNamespace "" }}
 {{ .WireResult }}::{{ .WireResult.Self }}(
