--- a/tools/fidl/fidlgen_llcpp/codegen/socket_protocol_caller.tmpl
+++ b/tools/fidl/fidlgen_llcpp/codegen/socket_protocol_caller.tmpl
@@ -4,7 +4,7 @@
 // found in the LICENSE file.
 */}}
 
-{{- define "Driver:Protocol:Caller:MessagingHeader" }}
+{{- define "Socket:Protocol:Caller:MessagingHeader" }}
 {{- EnsureNamespace "" }}
 
 // Methods to make a sync FIDL call directly on an unowned channel or a
@@ -19,7 +19,7 @@ class {{ .WireCaller }} final {
   {{- /* Client-calling functions do not apply to events. */}}
   {{- range .ClientMethods }}
     {{ .Docs }}
-    //{{ template "Driver:Method:ClientAllocationComment:Helper" . }}
+    //{{ template "Socket:Method:ClientAllocationComment:Helper" . }}
     static {{ .WireResult }} {{ .Name }}(
         {{- RenderParams (printf "::fidl::UnownedClientEnd<%s> _client_end" .Protocol)
                          .RequestArgs }}) {
@@ -27,7 +27,7 @@ class {{ .WireCaller }} final {
     }
 
     {{ .Docs }}
-    //{{ template "Driver:Method:ClientAllocationComment:Helper" . }}
+    //{{ template "Socket:Method:ClientAllocationComment:Helper" . }}
     {{ .WireResult }} {{ .Name }}({{- RenderParams .RequestArgs }}) && {
       return {{ .WireResult }}({{ RenderForwardParams "client_end_" .RequestArgs }});
     }
